re PR c++/56871 ([c++11] Specialization of constexpr Templated Function)

/cp
2013-04-08  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/56871
	* decl.c (validate_constexpr_redeclaration): Allow an explicit
	specialization to be different wrt the constexpr specifier.

/testsuite
2013-04-08  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/56871
	* g++.dg/cpp0x/constexpr-specialization.C: New.

From-SVN: r197597